log/build_2025-05-21_20-36-17/c8nav/stderr.log
  File "/home/gixstudent/Desktop/Final_lab/robotics_navigation/install/c8nav/lib/python3.10/site-packages/c8nav/send_goal_qr_code.py", line 130
    tf = self.t
               ^
SyntaxError: expected 'except' or 'finally' block

